# azure-ai-python

./: .gitignore  README.md  pyproject.toml
apps/: 1.azure-ai-inference.py  1_azure_ai_foundry_console.py  2_azure_ai_foundry_web.py
static/: chat-app.html
